@@ -1,3 +1,8 @@
+2009-03-17  Tomas Cerha  <cerha@debian.brailcom.xx>
+
+	* lib/pytis/extensions/cms/web.py:
+	Implemented authentication/authorization and session management.
+
 2009-03-10  Tomas Cerha  <cerha@debian.brailcom.xx>
 
 	* lib/pytis/extensions/cms/cms.py:
